Fix DefaultComponentInstaller::FinishRegistration and group policy.

The code in DefaultComponentInstaller::FinishRegistration is not updating
the value of CrxComponent::supports_group_policy_enable_component_updates
with the value provided by the specific installer traits.

Therefore, the components using the DefaultComponentInstaller for their
installer ignore the group policy settings for controlling the update behavior.

BUG=642148

Review-Url: https://codereview.chromium.org/2292463004
Cr-Commit-Position: refs/heads/master@{#415110}

Former-commit-id: 098a4a79496d92de9f1740b84cc45bd2b2713292